# mangococofx

./: .gitignore  CNAME  Dockerfile  Makefile  README.md  admin.html  fly.toml  index.html  main.js  main.py  poll-client.js  pyproject.toml  server.py  styles.css  ws-client.js
.github/workflows/: deploy.yml  static.yml
static/: admin.html  index.html  main.js  poll-client.js  styles.css
