[project]
name = "mangococofx"
version = "0.1.0"
description = "Mango Coco Production backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.30.0,<1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
